[gd_scene load_steps=5 format=2]

[ext_resource path="res://ASSETS/SPRITES/key/key_2.png" type="Texture" id=1]
[ext_resource path="res://key.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/objects/Platformer-25-Assets/confirmation_002.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.25, 7.75 )

[node name="key" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.445312, 0.445312 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 0.75 )
shape = SubResource( 1 )

[node name="SoundKey" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[connection signal="body_entered" from="." to="." method="_on_key_body_entered"]
[connection signal="finished" from="SoundKey" to="." method="_on_SoundKey_finished"]
